--- a/ansible/group_vars/production.yml
+++ b/ansible/group_vars/production.yml
@@ -92,6 +92,7 @@ loki_retention: "30d"
 grafana_root_url: "https://monitoring.louisvolat.fr"
 grafana_install_plugins: true
 prometheus_cadvisor_enabled: true
+prometheus_node_exporter_enabled: true
 
 # Backup
 backup_enabled: true
