--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -4,3 +4,5 @@ collections:
     version: ">=2.1.0"
   - name: community.docker
     version: ">=3.4.0"
+  - name: community.general
+    version: ">=9.0.0"
