Refactor database management:
- Remove shared PostgreSQL setup, keeping Redis as the only mutualized service.
- Migrate Immich and Nextcloud to dedicated PostgreSQL instances with updated `.env` templates and schema configurations.
- Simplify Ansible group variables by consolidating and standardizing database credentials.
- Adjust playbooks and tasks to align with the new database architecture.

--- a/ansible/roles/database/tasks/main.yml
+++ b/ansible/roles/database/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
-# Les instances PostgreSQL sont maintenant gérées directement par les applications (Nextcloud, Immich).
-# Seul Redis reste mutualisé ici.
+# Le rôle database gère maintenant exclusivement Redis Stack.
+# Les instances PostgreSQL sont gérées directement par les applications (Nextcloud, Immich).
 
 # ==============================================================================
 # Redis Stack
