--- a/ansible/secrets/vault.yml.example
+++ b/ansible/secrets/vault.yml.example
@@ -13,24 +13,6 @@ traefik_auth: "admin:$apr1$H6uskkkW$IgXLP6ewTrSuBkTrqE8wj/"
 traefik_acme_email: "admin@votre-domaine.fr"
 
 # ========================================
-# PostgreSQL mutualisé
-# ========================================
-postgres_root_password: "ChangeMe_RootPostgres123!"
-postgres_replication_password: "ChangeMe_Replication123!"
-
-# Databases & Users
-postgres_databases:
-  nextcloud:
-    user: "nextcloud"
-    password: "ChangeMe_NextcloudDB123!"
-  immich:
-    user: "immich"
-    password: "ChangeMe_ImmichDB123!"
-  grafana:
-    user: "grafana"
-    password: "ChangeMe_GrafanaDB123!"
-
-# ========================================
 # Redis mutualisé
 # ========================================
 redis_password: "ChangeMe_Redis123!"
@@ -38,8 +20,8 @@ redis_password: "ChangeMe_Redis123!"
 # ========================================
 # Immich
 # ========================================
-immich_db_password: "{{ postgres_databases.immich.password }}"
-immich_db_username: "{{ postgres_databases.immich.user }}"
+immich_db_password: "ChangeMe_ImmichDB123!"
+immich_db_username: "immich"
 immich_db_database: "immich"
 
 # ========================================
@@ -47,8 +29,8 @@ immich_db_database: "immich"
 # ========================================
 nextcloud_admin_user: "admin"
 nextcloud_admin_password: "ChangeMe_NextcloudAdmin123!"
-nextcloud_db_password: "{{ postgres_databases.nextcloud.password }}"
-nextcloud_db_user: "{{ postgres_databases.nextcloud.user }}"
+nextcloud_db_password: "ChangeMe_NextcloudDB123!"
+nextcloud_db_user: "nextcloud"
 nextcloud_db_database: "nextcloud"
 
 # ========================================
@@ -61,7 +43,7 @@ nextcloud_db_database: "nextcloud"
 # ========================================
 grafana_admin_user: "admin"
 grafana_admin_password: "ChangeMe_GrafanaAdmin123!"
-grafana_db_password: "{{ postgres_databases.grafana.password }}"
+grafana_db_password: "ChangeMe_GrafanaDB123!"
 grafana_secret_key: "ChangeMe_GrafanaSecretKey123!"
 
 # ========================================
