Integrate dedicated Postgres Exporter sidecars for Immich and Nextcloud:
- Add custom queries for Postgres Exporter (`postgres-exporter-queries.yaml`) with application-specific metrics.
- Update Docker Compose for Immich and Nextcloud to include Postgres Exporter containers configured with resource limits and health checks.
- Adjust monitoring architecture with a dedicated `monitoring` network and remove shared exporter configurations.
- Refactor Prometheus scrape configurations for Immich and Nextcloud exporters (`prometheus.yml`).
- Update Ansible playbooks to deploy Postgres Exporter resources and setup associated networks.

--- a/ansible/roles/docker/defaults/main.yml
+++ b/ansible/roles/docker/defaults/main.yml
@@ -9,6 +9,7 @@ docker_log_max_file: "5"
 
 # Network
 proxy_network_name: "traefik-proxy"
+monitoring_network_name: "monitoring"
 
 # GPU (conditionnel depuis group_vars)
 enable_gpu: false
