--- a/ansible/roles/docker/tasks/main.yml
+++ b/ansible/roles/docker/tasks/main.yml
@@ -118,6 +118,12 @@
     driver: bridge
     state: present
 
+- name: Créer le réseau monitoring
+  community.docker.docker_network:
+    name: "{{ monitoring_network_name }}"
+    driver: bridge
+    state: present
+
 - name: Vérifier Docker fonctionne
   ansible.builtin.command: docker ps
   changed_when: false
@@ -137,5 +143,6 @@
     msg:
       - "✅ Docker installé : {{ docker_version_installed.stdout }}"
       - "✅ Docker API version : {{ docker_api_version.stdout }}"
-      - "Réseau créé : {{ proxy_network_name }}"
+      - "Réseau Proxy : {{ proxy_network_name }}"
+      - "Réseau Monitoring : {{ monitoring_network_name }}"
       - "{% if docker_api_version.stdout is version('1.44', '>=') %}✅ Compatible avec Traefik v3.3+{% else %}⚠️  API trop ancienne pour Traefik v3.3 (minimum 1.44){% endif %}"
