--- a/ansible/roles/immich/tasks/main.yml
+++ b/ansible/roles/immich/tasks/main.yml
@@ -32,6 +32,12 @@
     dest: "{{ docker_compose_path }}/immich/.env"
     mode: '0600'
 
+- name: Copier les requêtes personnalisées postgres-exporter
+  ansible.builtin.copy:
+    src: ../../../ansible/roles/monitoring/files/postgres-exporter-queries.yaml
+    dest: "{{ docker_compose_path }}/immich/postgres-exporter-queries.yaml"
+    mode: '0644'
+
 - name: Générer le fichier docker-compose
   ansible.builtin.template:
     src: ../../../docker/app/immich/docker-compose.yml
